--- a/client/index.html
+++ b/client/index.html
@@ -13,10 +13,10 @@
   </head>
   <body>
     <nav class="navbar navbar-dark" style="background-color: #00826f;">
-      <a class="navbar-brand" href="#">Meet Me There</a>
+      <a class="navbar-brand" href="#" style="margin-left: 20px">Meet Me There</a>
     </nav>
 
-    <div class="row">
+    <div class="row row-divided">
       <div class="col-5">
         <div class="container">
           <div>
@@ -35,7 +35,7 @@
                               <input type="text" name="name" class="form-control" placeholder="Full Name" />
                           </td>
                           <td class="col-md-5">
-                              <input type="mail" name="mail" class="form-control" placeholder="Airport Code" />
+                              <input type="text" name="airport" class="autocomplete form-control" placeholder="Airport Code" />
                           </td>
                           <td class="col-md-2">
                               <input type="hidden" />
@@ -61,10 +61,10 @@
                   </tr>
                   <tr class="row">
                     <td class="col-sm">
-                      <input class="form-control" type="date" value="2019-03-30" id="fromDate">
+                      <input class="form-control" type="date" name="fromDate" value="2019-03-30" id="fromDate">
                     </td>
                     <td class="col-sm">
-                      <input class="form-control" type="date" value="2019-03-31" id="toDate">
+                      <input class="form-control" type="date" name="toDate" value="2019-03-31" id="toDate">
                     </td>
                   </tr>
                 </table>
@@ -77,10 +77,10 @@
         </div>
       </div>
 
+    <div class="vertical-divider"></div>
     <div class="col-7">
-      <div class="container" id="resultsTable">
-        </div>
-      </div>
+      <img src="./img/boarding.png" id="image1" style="width:100%;height:500px;">
+      <div class="row" id="resultsTable">
     </div>
 
     <!-- Optional JavaScript -->
@@ -88,7 +88,12 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.16.1/lodash.min.js"></script>
+    <script src="https://unpkg.com/fuse.js@2.5.0/src/fuse.min.js"></script>
+    <script src="https://screenfeedcontent.blob.core.windows.net/html/airports.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="script.js"></script>
   </body>
 </html>
