--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
 
-    <title>Hello, world!</title>
+    <title>Meet Me There</title>
   </head>
   <body>
     <nav class="navbar navbar-dark" style="background-color: #00826f;">
@@ -21,7 +21,7 @@
         <div class="container">
           <div>
             <div class="card-body">
-              <h4>Step 1: Add Friends</h4>
+              <h4 class="text-center">Step 1: Add Friends</h4>
               <form id="userForm">
                 <table id="myTable" class="table order-list">
                   <tbody>
@@ -32,7 +32,7 @@
                       </tr>
                       <tr class="row">
                           <td class="col-md-5">
-                              <input type="text" name="name" class="form-control" placeholder="Full Name" />
+                              <input type="text" name="name" class="form-control" placeholder="Full Name" value="A" />
                           </td>
                           <td class="col-md-5">
                               <input type="text" name="airport" class="autocomplete form-control" placeholder="Airport Code" />
@@ -44,7 +44,7 @@
                   </tbody>
                   <tfoot>
                       <tr>
-                          <td colspan="5" class="text-right">
+                          <td colspan="5" class="text-right text-center">
                               <button type="button" class="btn btn-info" id="addrow">Add friend</button>
                           </td>
                       </tr>
@@ -53,7 +53,7 @@
                   </tfoot>
                 </table>
 
-                <h4>Step 2: Select Dates</h4>
+                <h4 class="text-center" style="margin-top: 50px">Step 2: Select Dates</h4>
                 <table class="table">
                   <tr class="row">
                     <td class="col-sm">From Date</td>
@@ -68,7 +68,7 @@
                     </td>
                   </tr>
                 </table>
-                <div class="text-right">
+                <div class="text-right text-center">
                   <button type="button" class="btn btn-info" id="getFlights">Get Flights</button>
                 </div>
               </form>
@@ -79,7 +79,7 @@
 
     <div class="vertical-divider"></div>
     <div class="col-7">
-      <img src="./img/boarding.png" id="image1" style="width:100%;height:500px;">
+      <img src="./img/boarding.png" id="image1" style="width:100%;height:500px;margin-top:30px">
       <div class="row" id="resultsTable">
     </div>
 
