--- a/client/index.html
+++ b/client/index.html
@@ -80,6 +80,34 @@
     <div class="vertical-divider"></div>
     <div class="col-7">
       <img src="./img/boarding.png" id="image1" style="width:100%;height:500px;margin-top:30px">
+      <div class="wrapper" id="spinner">
+        <div class="loader">
+          <div class="wave top-wave">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <div class="wave bottom-wave">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+      </div>
       <div class="row" id="resultsTable">
     </div>
 
