--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-dark" style="background-color: #00826f;">
       <a class="navbar-brand" href="#" style="margin-left: 20px">Meet Me There</a>
     </nav>
-
+    <div id="targetDestination" style="background-color: #a93610; padding: 10px; text-align: center; color:white; display: none">Looking for Flights to ZRH</div>
     <div class="row row-divided">
       <div class="col-5">
         <div class="container">
