--- a/client/index.html
+++ b/client/index.html
@@ -121,6 +121,8 @@
     <script src="https://unpkg.com/fuse.js@2.5.0/src/fuse.min.js"></script>
     <script src="https://screenfeedcontent.blob.core.windows.net/html/airports.js"></script>
 
+    <script src="moment.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="script.js"></script>
   </body>
